Fixed bug #33942 (the patch to #33156 crash cygwin except cli)